--- a/books/templates/register_user.html
+++ b/books/templates/register_user.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>Register User</h1>
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="text" name="username" placeholder="Username">
         <input type="email" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
+        <input type="file" name="photo">
         <input type="submit" value="Register User">
     </form>
 </body>
