--- a/books/templates/index.html
+++ b/books/templates/index.html
@@ -7,6 +7,7 @@
     <title>Homepage</title>
 </head>
 <body>
+    <h1>16th August 2021</h1>
     <h1>Welcome to our blog -- {{ request.user }}</h1>
     <img src={{request.user.photo.url}} alt="Profile Picture">
     <ul>
